--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -1,1 +1,12 @@
-// TODO
+.headerContainer {
+  height: 6.5rem;
+}
+
+.headerContent {
+  max-width: 1120px;
+  height: 6.5rem;
+  margin: 0 auto;
+
+  display: flex;
+  align-items: center;
+}
