--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,48 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --white: #ffffff;
+
+  --gray-100: #f8f8f8;
+  --gray-300: #a8a8b3;
+  --gray-900: #282c34;
+
+  --cyan-500: #61dafb;
+  --yellow-500: #eba417;
+  --pink-500: #ff57b2;
+}
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+body {
+  background-color: var(--gray-900);
+  color: var(--white);
+}
+
+body,
+input,
+select,
+textarea,
+button {
+  font: 400 1rem 'Inter', sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
