--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,2 +1,26 @@
-.sample {
+.headerContainer {
+  display: flex;flex-direction: column;margin-bottom: 50px;
+  h1 {
+    margin-bottom: 20px;
+  }
+  > div {
+    display: flex;
+
+    div{
+      margin-right: 20px;
+      svg {
+        margin-right: 5px;
+      }
+    }
+  }
 }
+
+.articleContent{
+  p, ul {
+    margin-bottom:  20px;
+  }
+  li{
+    margin-bottom:  5px;
+  }
+}
+
